--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://admin:admin@cluster0.jnmdyon.mongodb.net/?retryWrites=true&w=majority
 PORT=3001
+NODE_OPTIONS="--openssl-legacy-provider"
