--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,13 @@
     "react-dom": "^17.0.1",
     "react-player": "^2.12.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "build": "react-scripts --openssl-legacy-provider build",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
