--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "https://vod-u-api.onrender.com",
   "dependencies": {
     "@apollo/client": "^3.3.5",
     "@emotion/react": "^11.5.0",
@@ -11,8 +11,6 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
