changing proxy in client/package to cyclic url

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://vod-u-api.onrender.com",
+  "proxy": "https://ruby-cloudy-springbok.cyclic.app/",
   "dependencies": {
     "@apollo/client": "^3.3.5",
     "@emotion/react": "^11.5.0",
