--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "vodu",
+  "name": "mern-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed"
+    "build": "npm run seed",
+    "start": "node server.js",
+    "watch": "nodemon",
+    "seed": "node seeders/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
   "dependencies": {
-
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-
-    "@mui/material": "^5.1.0",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "react-player": "^2.9.0",
-    "react-toastify": "^8.1.0",
-    "styled-components": "^5.3.3"
+    "apollo-server-express": "^2.12.0",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
